--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,18 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.2.7",
-    "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.postprocessing": "2.0.15-preview",
-    "com.unity.textmeshpro": "1.3.0",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.cinemachine": "2.5.0",
+    "com.unity.ide.rider": "1.1.4",
+    "com.unity.postprocessing": "2.3.0",
+    "com.unity.recorder": "2.1.0-preview.1",
+    "com.unity.render-pipelines.universal": "7.1.8",
+    "com.unity.test-framework": "1.1.11",
+    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.timeline": "1.2.13",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
